# trading

./: .gitignore  README.md  docker-compose.yml  project.toml  pyproject.toml  requirements.txt  ruff.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: requirements.txt
app/api/routes/: __init__.py  indicators.py  performance.py  router.py  stock_data.py
app/core/: config.py  utils.py
databases/postgreSql/: .env
src/tests/: test_estrategies.py  test_performace.py
src/trading/indicators/: base_indicator.py  mean_reversion.py  momentum_indicators.py  moving_averages.py
src/trading/performance/: base_performance.py  calculate_performance.py
src/trading/strategies/: base_strategy.py  bolling_strategy.py  crossover_strategy.py
src/trading/tests/: test_estrategies.py  test_indicators.py
trading/indicators/: base_indicator.py  momentum_indicators.py  moving_averages.py
trading/performance/: calculate_performance.py
trading/strategies/: base_strategy.py  crossover_strategy.py
trading/tests/: test_indicators.py  test_performace.py
trading_front/: dashboard.py
trading_front/pages/: home.py  indicators.py  performance.py  stock_data.py
