[project]
name = "trading"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Ricardo Cancar", email = "ricardocancar@gmail.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>2.1.0",
    "pandas>2.2.0",
    "pytest>8.3.0",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
